--- a/makeresume_codelion/border/DivideBorder.html
+++ b/makeresume_codelion/border/DivideBorder.html
@@ -14,7 +14,7 @@
     <head>
         <meta charset="UTF-8">
         <title>서가희의 PORTFOLIO</title>
-        <link rel="stylesheet" href="./박스쪼개기.css">
+        <link rel="stylesheet" href="DivideBorder.css">
     </head>
 
     <body>
