--- a/makeresume_codelion/center/AlignCenter.html
+++ b/makeresume_codelion/center/AlignCenter.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>서가희의 PORTFOLIO</title>
-        <link rel="stylesheet" href="./중앙배치.css">
+        <link rel="stylesheet" href="AlignCenter.css">
     </head>
 
     <body>
