--- a/makeresume_codelion/documentskeleton/MakeDocumentSkeleton.html
+++ b/makeresume_codelion/documentskeleton/MakeDocumentSkeleton.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>서가희의 PORTFOLIO</title>
-        <link rel="stylesheet" href="./문서골격꾸미기.css">
+        <link rel="stylesheet" href="MakeDocumentSkeleton.css">
     </head>
 
     <body>
