--- a/makeresume_codelion/readability/MakeReadability.html
+++ b/makeresume_codelion/readability/MakeReadability.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./가독성.css">
+        <link rel="stylesheet" href="MakeReadability.css">
 
     </head>
     <body>
