--- a/makeresume_codelion/resume/MakeFinalResume.html
+++ b/makeresume_codelion/resume/MakeFinalResume.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>김멋사의 이력서</title>
-  <link rel="stylesheet" href="aboutme.css">
+  <title>서가희의 이력서</title>
+  <link rel="stylesheet" href="MakeFinalResume.css">
 </head>
 <body>
   <div class="mainbox">
