--- a/makeresume_codelion/webfont/UseGoogleFont.html
+++ b/makeresume_codelion/webfont/UseGoogleFont.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>서가희의 PORTFOLIO</title>
-        <link rel="stylesheet" href="./구글웹폰트.css">
+        <link rel="stylesheet" href="UseGoogleFont.css">
     </head>
 
     <body>
