--- a/makeresume_codelion/aboutmepage/MakeAboutMePage.html
+++ b/makeresume_codelion/aboutmepage/MakeAboutMePage.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>서가희 이력서</title>
-  <link rel="stylesheet" href="./aboutme.css">
+  <link rel="stylesheet" href="MakeAboutMePage.css">
 </head>
 <body>
   <div class="mainbox">
-    <h1>김멋사</h1>
+    <h1>서가희</h1>
     <p class="name-text">HTML/CSS 개발자</p>
     <section>
       <h2>ABOUT ME</h2>
