--- a/makeresume_codelion/float/UseFloat.html
+++ b/makeresume_codelion/float/UseFloat.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>김멋사의 이력서</title>
-  <link rel="stylesheet" href="aboutme.css">
+  <title>서가희의 이력서</title>
+  <link rel="stylesheet" href="UseFloat.css">
 </head>
 <body>
   <div class="mainbox">
-    <h1>김멋사</h1>
+    <h1>서가희</h1>
     <p class="name-text">HTML/CSS 개발자</p>
     <section>
       <h2>ABOUT ME</h2>
