--- a/makeresume_codelion/shawdow/ShowShadow.html
+++ b/makeresume_codelion/shawdow/ShowShadow.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>서가희의 PORTFOLIO</title>
-        <link rel="stylesheet" href="./r그림자표현.css">
+        <link rel="stylesheet" href="ShowShadow.css">
     </head>
 
     <body>
