--- a/html/006.html
+++ b/html/006.html
@@ -38,7 +38,7 @@
         <p>서가희</p>
         <p>3월 28일 오후 15:43</p>
         <p> content</p>
-        <img src="card-image.jpg" alt="">
+        <img src="images/card-image.jpg" alt="">
     </article>
 </body>
 </html>
