--- a/html/008.html
+++ b/html/008.html
@@ -21,11 +21,11 @@
 			 300px"
         src="1.png" alt="rabit"> -->
         <picture>
-            <source srcset="1.png" media=
+            <source srcset="images/1.png" media=
             "(min-width:960px)">
-            <source srcset="2.png" media=
+            <source srcset="images/2.png" media=
             "(min-width:640px)">
-            <img src="3.png" alt="">
+            <img src="images/3.png" alt="">
         </picture>
 </body>
 </html>
