한번해볼게

--- a/html/010.html
+++ b/html/010.html
@@ -12,4 +12,4 @@
         <li><a href="/FrontEnd/kdt">kdt</a></li>
         <li><a href="/FrontEnd/edu">edu</a></li>
     </ul></body>
-</html>
+</html>ad
