--- a/html/010.html
+++ b/html/010.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+    <title>iframe</title>
 </head>
 <body>
-    <ul>
-        <li><a href="/FrontEnd/about">about</a></li>
-        <li><a href="/FrontEnd/kdt">kdt</a></li>
-        <li><a href="/FrontEnd/edu">edu</a></li>
-    </ul></body>
-</html>ad
+    <!-- <iframe width="894" height="503" src="https://www.youtube.com/embed/POJ5S2aUizA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1000px" height="500px" src="http://paullab.co.kr/" frameborder="0"></iframe>
+    <iframe width="300px" height="300px" src="https://www.naver.com" frameborder="0"></iframe> -->
+    <!-- <audio controls autoplay loop class="bgm">
+        <source src="https://drive.google.com/uc?export=download&id=1xbevC0q-fNUDuoFCSLUdot0OIO81LgpE" type="audio/mp3" >
+    </audio> -->
+    <video controls width="250">
+
+        <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"
+                type="video/webm">
+    
+        <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4"
+                type="video/mp4">
+    
+        Sorry, your browser doesn't support embedded videos.
+    </video>
+</body>
+</html>
