--- a/login/join.html
+++ b/login/join.html
@@ -14,16 +14,18 @@
             <h1>회원가입</h1>
         </header>
         <main class="main">
-            <input type="text" name="id" class="input id" value="이메일"> <br>
-            <input type="text" name="pwd" class="input pwd" value="비밀번호"><br>
-            <input type="text" name="check-pwd" class="input check-pwd" value="비밀번호 확인"><br>
-            <button type="submit" class="btn phone">휴대폰 본인 인증</button><br>
-            <input type="text" name="name" class="input name" value="이름"><br>
-            <input type="text" name="phone" class="input phone" value="휴대폰"><br>
-            <p class="explain">이름, 휴대폰 번호, 성별,생년월일은 본인 인증 후 자동등록 됩니다. </p>
-            <button type="submit" class="btn male">남자</button>
-            <button type="submit" class="btn female">여자</button><br>
-            <input type="text" name="birth" class="input birth" value="생년월일"><br>
+            <form>
+                <input type="text" name="id" class="input id" value="이메일"> <br>
+                <input type="text" name="pwd" class="input pwd" value="비밀번호"><br>
+                <input type="text" name="check-pwd" class="input check-pwd" value="비밀번호 확인"><br>
+                <button type="submit" class="btn phone">휴대폰 본인 인증</button><br>
+                <input type="text" name="name" class="input name" value="이름"><br>
+                <input type="text" name="phone" class="input phone" value="휴대폰"><br>
+                <p class="explain">이름, 휴대폰 번호, 성별,생년월일은 본인 인증 후 자동등록 됩니다. </p>
+                <button type="submit" class="btn male">남자</button>
+                <button type="submit" class="btn female">여자</button><br>
+                <input type="text" name="birth" class="input birth" value="생년월일"><br>
+            </form>
             <article class="degree">
                <input type="checkbox" name="all" id="check"><label for="check">전체동의하기</label><br>
                <input type="checkbox" name="service" id="check"><label for="check">서비스 이용약관 동의(필수)</label><br>
