--- a/login/login.html
+++ b/login/login.html
@@ -14,10 +14,12 @@
             <h1>로그인</h1>
         </header>
         <main class="main">
-            <input type="text" name="id" class="input id" value="이메일"> <br>
-            <input type="text" name="pwd" class="input pwd" value="비밀번호"><br>
-            <a href=""><button type="submit" class="btn login">로그인</button></a>
-            <a href="join.html"><button type="submit" class="btn join">회원가입</button></a>
+            <form>
+                <input type="text" name="id" class="input id" value="이메일"> <br>
+                <input type="text" name="pwd" class="input pwd" value="비밀번호"><br>
+                <a href=""><button type="button" class="btn login">로그인</button></a>
+                <a href="join.html"><button type="button" class="btn join">회원가입</button></a>
+            </form>
         </main>
     </section>
 </body>
