--- a/login/join.html
+++ b/login/join.html
@@ -15,25 +15,25 @@
         </header>
         <main class="main">
             <form>
-                <input type="text" name="id" class="input id" value="이메일"> <br>
-                <input type="text" name="pwd" class="input pwd" value="비밀번호"><br>
-                <input type="text" name="check-pwd" class="input check-pwd" value="비밀번호 확인"><br>
-                <button type="submit" class="btn phone">휴대폰 본인 인증</button><br>
-                <input type="text" name="name" class="input name" value="이름"><br>
-                <input type="text" name="phone" class="input phone" value="휴대폰"><br>
+                <input type="email" name="id" class="input id" placeholder="이메일"> <br>
+                <input type="text" name="pwd" class="input pwd" placeholder="비밀번호"><br>
+                <input type="text" name="check-pwd" class="input check-pwd" placeholder="비밀번호 확인"><br>
+                <button type="button" class="btn phone">휴대폰 본인 인증</button><br>
+                <input type="text" name="name" class="input name" placeholder="이름"><br>
+                <input type="text" name="phone" class="input phone" placeholder="휴대폰"><br>
                 <p class="explain">이름, 휴대폰 번호, 성별,생년월일은 본인 인증 후 자동등록 됩니다. </p>
-                <button type="submit" class="btn male">남자</button>
-                <button type="submit" class="btn female">여자</button><br>
-                <input type="text" name="birth" class="input birth" value="생년월일"><br>
-            </form>
-            <article class="degree">
-               <input type="checkbox" name="all" id="check"><label for="check">전체동의하기</label><br>
-               <input type="checkbox" name="service" id="check"><label for="check">서비스 이용약관 동의(필수)</label><br>
-               <input type="checkbox" name="age" id="check"><label for="check">만 14세 이상입니다(필수)</label><br>
-               <input type="checkbox" name="ad" id="check"><label for="check">광고성 정보 수신동의(선택)</label><br>
-            </article>
+                <button type="button" name="male" class="btn male">남자</button>
+                <button type="button" class="btn female">여자</button><br>
+                <input type="text" name="birth" class="input birth" placeholder="생년월일"><br>
+                <article class="degree">
+                <input type="checkbox" name="all" id="check"><label for="check">전체동의하기</label><br>
+                <input type="checkbox" name="service" id="check"><label for="check">서비스 이용약관 동의(필수)</label><br>
+                <input type="checkbox" name="age" id="check"><label for="check">만 14세 이상입니다(필수)</label><br>
+                <input type="checkbox" name="ad" id="check"><label for="check">광고성 정보 수신동의(선택)</label><br>
+                </article>
             <a href="login.html" class="link"><button type="submit" class="btn join">회원가입완료</button></a><br>
             <p class="already">이미 가입하셨나요?<a href="login.html" class="link">로그인하기</a></p>
+            </form>
         </main>
     </section>
 </body>
