--- a/googleform/googleform.html
+++ b/googleform/googleform.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <section class="main">
-                <form action="" method="get" class="form" >
+                <form action="" method="post" class="form" >
                     <section class="sec company">
                         <h2>다음 문자중에 왠지 마음에 드는 것을 하나 고르세요.</h2>
                         <input type="radio" name="com" id="naver">
