fix : 코드 살짝 수정

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -18,7 +18,7 @@
                     JANUARY
                 </caption>
                 <tr>
-                    <th class="sun">SUN</th>
+                    <th>SUN</th>
                     <th>MON</th>
                     <th>TUE</th>
                     <th>WED</th>
@@ -81,7 +81,7 @@
                     February
                 </caption>
                 <tr>
-                    <th class="sun">SUN</th>
+                    <th>SUN</th>
                     <th>MON</th>
                     <th>TUE</th>
                     <th>WED</th>
@@ -135,7 +135,7 @@
                     March
                 </caption>
                 <tr>
-                    <th class="sun">SUN</th>
+                    <th>SUN</th>
                     <th>MON</th>
                     <th>TUE</th>
                     <th>WED</th>
@@ -197,7 +197,7 @@
                     April
                 </caption>
                 <tr>
-                    <th class="sun">SUN</th>
+                    <th>SUN</th>
                     <th>MON</th>
                     <th>TUE</th>
                     <th>WED</th>
@@ -256,7 +256,7 @@
                     May
                 </caption>
                 <tr>
-                    <th class="sun">SUN</th>
+                    <th>SUN</th>
                     <th>MON</th>
                     <th>TUE</th>
                     <th>WED</th>
@@ -311,7 +311,7 @@
                     June
                 </caption>
                 <tr>
-                    <th class="sun">SUN</th>
+                    <th>SUN</th>
                     <th>MON</th>
                     <th>TUE</th>
                     <th>WED</th>
