--- a/html/013_input타입.html
+++ b/html/013_input타입.html
@@ -64,7 +64,17 @@
         <label for="checkAgree">개인정보 제공에 동의하십니까?</label>
         <input type="checkbox" name="agree" id="checkAgree">
         <input type="submit" value="hiii">
+        
         </fieldset>
     </form>
+    <form action="">
+        <label for="myDevice">현재 사용하고 있는 스마트폰의 제조사를 선택해주세요</label>
+        <select name="device" id="myDevice">
+          <option value="iphone">아이폰</option>
+          <option value="galaxy">갤럭시폰</option>
+          <option value="ㅜㅜ">LG폰</option>
+          <input type="submit" value="hiii"
+        </select>
+      </form>
 </body>
 </html>
