--- a/html/016_inline_block.html
+++ b/html/016_inline_block.html
@@ -13,14 +13,14 @@
             display: block;
             width: 300px;
             height: 300px;
-            background-color: red;
+            background-color: yellowgreen;
         }
         span {
             font-size: 16px;
             display: inline-block;
             width: 150px;
             height: 150px;
-            background-color: blue;
+            background-color: teal;
         }
         /* 
             여러가지 방법이 있습니다. 어떤게 정답이라고 말씀드리기 어렵습니다.
