--- a/CSS/020_가변단위.html
+++ b/CSS/020_가변단위.html
@@ -19,14 +19,14 @@
             font-size: 2rem;
         }
         .two {
-            width: 50%;
-            height: 200px;
-            background-color: red;
+            width: 500px;
+            height: 50vh;
+            background-color: green;
         }
         .three {
             width: 500px;
             height: 400px;
-            background-color: blue;
+            background-color: yellow;
         }
         .four {
             width: 50vw;
