--- a/CSS/022_overfolw.html
+++ b/CSS/022_overfolw.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <img width="200" src="http://www.paullab.co.kr/images/ceo.png" alt="">
+        <img width="200" src="https://w.namu.la/s/45507892b4f48b2b3d4a6386f6dae20c28376a8ef5dfb68c7cc95249ec358e3e68df77594766021173b2e6acf374b79ce02e9eeef61fcdf316659e30289e123fbddf6e5ec3492eddbc582ee5a59a2ff5d6ee84f57ad19277d179b613614364ad" alt="">
     </div>
 </body>
 </html>
