--- a/CSS/024_background_2.html
+++ b/CSS/024_background_2.html
@@ -12,7 +12,8 @@
         margin: 20px;
         background-image: url("https://www.tvn-2.com/nacionales/Imagen-ilustrativa-gato-medio-bosque_18585331.jpg");
         background-size: 100px auto;
-        /* 이미지 하나가 100 */
+        /* 이미지 하나가 100 
+        background-size: 100px auto;로 하게 되면 높이값은 100px에 비례해서 맞춰지게되나요*/
         border: 4px solid black;
       }
       .repeat {
@@ -45,6 +46,7 @@
     </style>
 </head>
 <body>
+    <div></div>
     <div class="repeat"></div>
     <div class="repeat-x"></div>
     <div class="repeat-y"></div>
