--- a/CSS/029_fontawesome.html
+++ b/CSS/029_fontawesome.html
@@ -11,5 +11,6 @@
     <i class="fa fa-heart"></i>
     <!-- 현재 버전과 다름 -->
     <i class="fa fa-shopping-cart"></i>
+    <i class="fa fa-facebook"></i>
 </body>
 </html>
