--- a/CSS/035_vertical_align.html
+++ b/CSS/035_vertical_align.html
@@ -8,7 +8,7 @@
         }
         .one {
             /* vertical-align: baseline; */
-            /* vertical-align: top; */
+            vertical-align: top;
             /* vertical-align: middle; */
             font-size: 10px;
         }
@@ -25,9 +25,9 @@
 </head>
 <body>
     <div class="container">
-        <sapn class="one">Lorem ipsum</sapn>
-        <sapn class="two">dolor sit amet</sapn>
-        <sapn class="three">consectetur adipisicing</sapn>    
+        <span class="one">Lorem ipsum</span>
+        <span class="two">dolor sit amet</span>
+        <span class="three">consectetur adipisicing</span>    
     </div>
     <div class="container">
         <img width="100px" src="https://www.tvn-2.com/nacionales/Imagen-ilustrativa-gato-medio-bosque_18585331.jpg" alt="">
