--- a/CSS/030_bootstrap.html
+++ b/CSS/030_bootstrap.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <style>
-        .one {
-            background-color: ;
-        }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css"
+    />
 </head>
 <body>
-    
+    <i class="bi bi-alarm"></i>
 </body>
 </html>
