--- a/CSS/036.text_align.html
+++ b/CSS/036.text_align.html
@@ -1,4 +1,4 @@
-<!DOCYPE html>
+<!-- <!DOCYPE html>
 <html>
 <head>
 <title>텍스트 정렬</title>
@@ -37,4 +37,28 @@
         <span>가운데 정렬</span>
     </div>
 </body>
-</html>
+</html> -->
+<!-- <!DOCYPE html>
+<html>
+  <head>
+    <title>텍스트 정렬</title>
+    <style>
+      .text_initial{
+        text-align: initial;
+      }
+      .text_justify{
+        text-align: center;
+		padding: 10px 0px;
+      }
+      </style>
+    </head>
+    <body>
+      <div class="text_initial">
+        <span>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세</span>
+      </div>
+      <br>
+      <div class="text_justify">
+        <span>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세</span>
+      </div>
+    </body>
+</html> -->
