--- a/CSS/013_width_height.html
+++ b/CSS/013_width_height.html
@@ -2,14 +2,20 @@
 <html lang="ko">
 <head>	
     <style>
+        .one {
+        
+            background-color: black;
+        }
     h1 {
-        width: 100px;
-        height: 50px;
+        width: 100%;
+        height: 100px;
         background-color: red;
     }
     </style>
 </head>
     <body>
+        <div class="one">
         <h1>안녕하세요 여러분!!</h1>
+        <div></div>
     </body>
 </html>
