코드 추후에 수정할 것

--- a/기초구현실습_로그인화면/index.html
+++ b/기초구현실습_로그인화면/index.html
@@ -20,6 +20,10 @@
                 <img src="images/weniv-logo.png" alt="">
                 <a href="">로그인</a>
             </article>
+            <article class="float-wrap">
+                    <p class="info-text">아이디 | 비밀번호 찾기</p>
+                    <p class="join-text">회원가입</p>
+            </article>
         </main>
     </section>
 </body>
