--- a/기초구현실습_로그인화면/index.html
+++ b/기초구현실습_로그인화면/index.html
@@ -17,8 +17,7 @@
         </header>
         <main class="main">
            <article class="login">
-                <img src="images/weniv-logo.png" alt="">
-                <a href="">로그인</a>
+                <button><img src="images/weniv-logo.png" alt="">로그인</button>
             </article>
             <article class="float-wrap">
                     <p class="info-text">아이디 | 비밀번호 찾기</p>
