--- a/CSS/013_width_height.html
+++ b/CSS/013_width_height.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
 <head>	
     <style>
@@ -18,4 +18,51 @@
         <h1>안녕하세요 여러분!!</h1>
         <div></div>
     </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>	
+    <style>
+        .one {      
+            background-color: black;
+        }
+        .two {
+            height:150px;
+            background-color: green;
+        }
+        h1 {
+            width: 50%;
+            height: 170px;
+            background-color: red;
+    }
+    </style>
+</head>
+    <body>
+        <div class="one">
+            <div class="two">
+                <h1>안녕하세요 여러분!!</h1>
+            </div>
+        <div></div>
+    </body>
 </html>
+<!-- <!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <style>
+        body {
+            margin:0;
+        }
+        .cover {
+            background-color:black;
+            height:100%;
+        }
+    </style>
+</head>
+<body>
+    <div class="cover">wow</div>
+</body>
+</html> -->
