--- a/CSS/015_margin겹침현상.html
+++ b/CSS/015_margin겹침현상.html
@@ -1,5 +1,5 @@
 <!-- 1.  -->
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
     <head>
         <style>
@@ -33,7 +33,7 @@
 
         </div>
     </body>
-</html>
+</html> -->
 <!-- 2 -->
 <!-- <!DOCTYPE html>
 <html lang="ko">
@@ -155,3 +155,32 @@
     </div>
 </body>
 </html> -->
+<!DOCTYPE html>
+<html lang="ko">
+    <head>
+        <style>
+            body {
+                background-color:pink;
+            }
+            .parents {
+                padding:1;
+                background-color: rgb(143, 109, 109);
+            }
+            .children {
+                background-color: white;
+                border: 1px solid rgb(143, 109, 109);
+                margin:50px;
+                padding:20px;
+                width: 50px;
+                height: 50px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="parents">
+            <div class="children">section #1</div>
+        
+            <div class="children">section #2</div>
+        </div>
+    </body>
+</html>
