--- a/CSS/044_text_decoration.html
+++ b/CSS/044_text_decoration.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
 <head>
     <style>
@@ -11,4 +11,4 @@
     <p> hello owlrd </p>
     <p class="a">hello wolrd</p>
 </body>
-</html>
+</html> -->
