--- a/CSS/033_lineheight.html
+++ b/CSS/033_lineheight.html
@@ -20,7 +20,7 @@
             /* line-height: 1em; */
 
             /* 3. 1값을 사용했을 경우 개발자 도구 열어서 확인해보면 contents 높이가 32px 그러나 만약 line-height:1이 없다면 42.86! leading 영역이 폰트의 위 아래로 존재하기 때문, line-height 1은 이 leading 영역을 없앰(폰트 높이에 딱 붙게됨), leading 영역까지 포함하여 nomal */
-            /* line-height: 1; */
+            line-height: 1;
         }
         .one {
             border: 1px solid black;
