--- a/CSS/034_letter_spacing.html
+++ b/CSS/034_letter_spacing.html
@@ -2,14 +2,18 @@
 <html lang="ko">
 <head>
     <style>
-        p {
+        p:nth-child(1) {
             /* letter-spacing: 1px; */
             /* letter-spacing: 1.2px; */
             letter-spacing: 1em;
         }
+        p:nth-child(2) {
+            letter-spacing: 16px;
+        }
     </style>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque facilis maxime ducimus delectus sint nostrum tempore officiis aliquam quae porro voluptates expedita id, iusto eos esse vitae cum, repellat sunt.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque facilis maxime ducimus delectus sint nostrum tempore officiis aliquam quae porro voluptates expedita id, iusto eos esse vitae cum, repellat sunt.</p>
 </body>
 </html>
