--- a/CSS/035_vertical_align.html
+++ b/CSS/035_vertical_align.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="ko">
 <head>
     <style>
-         .container {
+        .container {
             border: 1px solid black;
-            line-height: 1;
+            /* line-height: 1; */
         }
         .one {
             /* vertical-align: baseline; */
@@ -31,7 +30,7 @@
         <span class="three">consectetur adipisicing</span>    
     </div>
     <div class="container">
-        <img width="100px" src="https://www.tvn-2.com/nacionales/Imagen-ilustrativa-gato-medio-bosque_18585331.jpg" alt="">
+        <img width="100px" src="https://www.tvn-2.com/nacionales/Imagen-ilustrativa-gato-medio-bosque_18585331.jpg" alt="">gad
     </div>
 </body>
 </html>
