--- a/CSS/036.text_align.html
+++ b/CSS/036.text_align.html
@@ -38,7 +38,8 @@
     </div>
 </body>
 </html> -->
-<!-- <!DOCYPE html>
+
+<!DOCTYPE html>
 <html>
   <head>
     <title>텍스트 정렬</title>
@@ -47,8 +48,9 @@
         text-align: initial;
       }
       .text_justify{
+        border:1px solid black;
         text-align: center;
-		padding: 10px 0px;
+		    padding: 10px 0px;
       }
       </style>
     </head>
@@ -61,4 +63,4 @@
         <span>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려 강산 대한 사람 대한으로 길이 보전하세</span>
       </div>
     </body>
-</html> -->
+</html>
