--- a/기초구현실습_로그인화면/index.html
+++ b/기초구현실습_로그인화면/index.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입페이지</title>
+    <title>로그인 화면</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,500&display=swap" rel="stylesheet">
+    <link href='https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <article class="cont-login">
-        <h2 class="blind">로그인 페이지를 만들어보자</h2>
-        <p class="txt-login">더 편리해진 위니브에 오신 것을 환영합니다.</p>
-        <a href="#none" class="btn-login">
-            <img src="images/weniv-logo.png" class="img-logo" alt="">로그인
-        </a>
-        <div class="find-login">
-            <img src="images/icon-lock.png" alt="" class="find-icon">
-            <a href="#none" class="find-id">아이디</a>
-            <a href="#none" class="find-pwd">비밀번호</a>
+    <section class="login">
+        <header class="tit-login">
+            <h1>더 편리해진 위니브에 오신 것을 환영합니다.</h1>
+        </header>
+        <div class="main-login">
+            <a href="#none" class="link-login">
+            <img src="images/weniv-logo.png" alt="" class="img-login">로그인
+            </a>
+            <div class="make-login">
+                <img src="images/icon-lock.png" alt="" class="find-login">
+                <a href="#none" class="find-id">아이디</a>
+                <a href="#none" class="find-pwd">비밀번호</a>
+            </div>
+            <div class="make-user">
+                <img src="images/icon-user.png" alt="" class="join-login">
+                <a href="#none" class="join-user">회원가입</a>
+            </div>
         </div>
-        <div class="join-login">
-            <img src="images/icon-user.png" alt="" class="join-icon">
-            <a href="#none" class="join-user">회원가입</a>
-        </div>
-    </article>
+        </main>
+    </section>
 </body>
 </html>
