--- a/practice_login_basic/login.html
+++ b/practice_login_basic/login.html
@@ -12,16 +12,16 @@
         <header class="header-login">
             <h1 class="blind"> 로그인 페이지</h1>
             <p class="head-login">로그인 또는 회원가입</p>
-            <img src="close.png" alt="" class="login-close">
+            <img src="close.png" alt="" class="login-close" onclick="location.href='index.html'"> 
         </header>
         <main class="main-login">
             <h2 class="tit-login">위니브에서 여러분의 궁금증을 해결하세요!</h2>
             <div class="idpwd-login">
                 <input type="text" class="btn-id" placeholder="아이디">
-                <input type="text" class="btn-pwd" placeholder="비밀번호">
+                <input type="password" class="btn-pwd" placeholder="비밀번호">
             </div>
-            <div class="continue-login">
-                <img src="ELlipse 1.png" alt="" class="check-login">
+            <div class="continue-login" onclick="changeimage()">
+                <img src="check-box.png" alt="" id="check-login" class="check-login">
                 <span class="txt-login">로그인 상태 유지</span>
             </div>
             <a href="#none" class="btn-login">로그인</a>
@@ -56,5 +56,28 @@
             </div>
         </main>
     </section>
+    <script type="text/javascript">
+        
+        var state=1;
+        function changeimage(){
+            if (state==0){
+                state=1;
+                document.getElementById("check-login").src="check-box.png";
+            }
+            else{
+                state=0;
+                document.getElementById("check-login").src="check-box-blue.png";
+            }
+        }
+
+        // function IDcheck {
+        //     var id= document.getElementById("id");
+        //     if ((id.value)==""){
+        //     id.style.border = "2px solid #F4492E";
+        //     return false;
+        // }
+        //}
+    
+    </script>
 </body>
 </html>
