--- a/practice_login_basic/login.html
+++ b/practice_login_basic/login.html
@@ -32,25 +32,25 @@
             <p class="or-login">또는</p>
             <div class="google">
                 <a href="#none" class="google-login">
-                    <img src="Google__G__Logo 1.png" alt="" class="img-google">
+                    <!-- <img src="Google__G__Logo 1.png" alt="" class="img-google"> -->
                     <span class="txt-google">구글 계정으로 로그인</span>
                 </a>
             </div>
             <div class="facebook">
                 <a href="#none" class="facebook-login">
-                    <img src="facebook.png" alt="" class="img-facebook">
+                    <!-- <img src="facebook.png" alt="" class="img-facebook"> -->
                     <span class="txt-google">페이스북계정으로 로그인</span>
                 </a>
             </div>
             <div class="naver">
                 <a href="#none" class="naver-login">
-                    <img src="naver-logo.png" alt="" class="img-naver">
+                    <!-- <img src="naver-logo.png" alt="" class="img-naver"> -->
                     <span class="txt-naver">네이버 계정으로 로그인</span>
                 </a>
             </div>
             <div class="kakao">
                 <a href="#none" class="kakao-login">
-                    <img src="message-circle.png" alt="" class="img-kakao">
+                    <!-- <img src="message-circle.png" alt="" class="img-kakao"> -->
                     <span class="txt-kakao">카카오톡 계정으로 로그인</span>
                 </a>
             </div>
