--- a/CSS/043_text_indent.html
+++ b/CSS/043_text_indent.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
 <head>
     <style>
@@ -10,5 +10,46 @@
 <body>
     <p> hello owlrd </p>
     <p class="a">hello wolrd</p>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>reverse</title>
+    <style>
+        @keyframes 돌아와돌아와돌아와 {
+            0% {
+                transform: translate(0, 0);
+            }
+
+            25% {
+                transform: translate(500px, 0);
+            }
+
+            50% {
+                transform: translate(500px, 500px);
+            }
+
+            75% {
+                transform: translate(0, 500px);
+            } 
+            100% {
+                transform: translate(0, 0);
+            }            
+        }
+
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: rosybrown;
+            animation: 돌아와돌아와돌아와 3s alternate infinite;
+        }
+    </style>
+</head>
+<body>
+    <div>hello</div>
 </body>
 </html>
