--- a/Dropdown-selectbox/index.html
+++ b/Dropdown-selectbox/index.html
@@ -1,112 +1,39 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            .dropbtn {
-                border: 1px solid #C4C4C4;
-                border-radius: 10px;
-                box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
-                width: 200px;
-                padding: 12px 55px 12px 13px;
-                cursor: pointer;
-                background-color:white;
-                background:url('Polygon\ 1.png') no-repeat 95% 50%/15px auto;
-            }
-
-            .dropdown {
-                position: relative;
-                display: inline-block;
-            }
-
-            .dropdown-content {
-                display: none;
-                position: absolute;
-                background-color: #FFF;
-                width: 200px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                padding:4px 7px 4px;
-            }
-
-            .dropdown-content a {
-                color: black;
-                padding: 12px 16px;
-                text-decoration: none;
-                display: block;
-            }
-
-            .dropdown-content a:hover {
-                background-color: #F8E4FF;
-                border: 1px solid #F8E4FF;
-                border-radius: 8px;
-            }
-
-            .dropdown:hover .dropdown-content {
-                display: block;
-            }
-
-            .dropdown:hover .dropbtn {
-                border: 1px solid #9B51E0;
-            }
-        </style>
-    </head>
-<body>
-    <form method="post" class="dropbox-form">
-        <button class="language-btn">최애 프로그래밍 언어</button>
-        <ul class="language-list">
-            <li class="python">Python</li>
-            <li class="Java">Java</li>
-            <li class="JavaScript">JavaScript</li>
-            <li class="C#">C#</li>
-            <li class="C/C++">C/C++</li>
-        </ul>
-    </form> -->
-
-<!-- <div class="dropdown">
-  <button class="dropbtn">최애 프로그래밍 언어</button>
-
-  <div class="dropdown-content">
-    <a href="#none">Python</a>
-    <a href="#none">Java</a>
-    <a href="#none">JavaScript</a>
-    <a href="#none">C#</a>
-    <a href="#none">C/C++</a>
-
-  </div> -->
-
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>드롭박스</title>
+    <title>드롭박스 만들기</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="button_action.js">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <form method="post" class="dropbox-form">
-        <input type="checkbox" id="language-btn">
-        <label for="language-btn" class="language-label" onclick="changeimg()" id="changeimg">최애 프로그래밍 언어</label>
-            <ul class="language-list" id="language-list">
-                <li class="language python">Python</li>
-                <li class="language Java">Java</li>
-                <li class="language JavaScript">JavaScript</li>
-                <li class="language C#">C#</li>
-                <li class="language C/C++">C/C++</li>
-            </ul>
-        </form>
+    <article class="wrapper">
+        <h2 class="txt-hide">최애 프로그래밍 언어를 선택해주세요.</h2>
+        <button class="btn-select" id="changeimg" onclick="changeimg()">최애 프로그래밍 언어</button>
+        <ul class="list-lang" id="list">
+            <li><button>Python</button></li>
+            <li><button>Java</button></li>
+            <li><button>JavaScript</button></li>
+            <li><button>C#</button></li>
+            <li><button>C/C++</button></li>
+        </ul>
+    </article>
     <script>
         var flag=0;
         function changeimg() {
             if(flag == 0) {
                 document.getElementById("changeimg").style.backgroundImage='url("image/direction1.png")';
+                document.getElementById("list").style.display="block";
+                document.getElementById("changeimg").style.borderColor="#9B51E0";
+                document.getElementById("changeimg").style.outline="3px solid #F8E4FF";
                 flag=1;
             }
             else {
                 document.getElementById("changeimg").style.backgroundImage='url("image/direction.png")';
+                document.getElementById("list").style.display="none";
+                document.getElementById("changeimg").style.borderColor="#C4C4C4";
                 flag=0;
             }
         }
