이력서 만들기

--- a/practice_login_basic/login.html
+++ b/practice_login_basic/login.html
@@ -58,7 +58,7 @@
     </section>
     <script type="text/javascript">
         
-        var state=1;
+        const state=1;
         function changeimage(){
             if (state==0){
                 state=1;
