--- a/my_profile/profile.html
+++ b/my_profile/profile.html
@@ -92,7 +92,7 @@
                 <ul class="border-r-4 inline-block pr-10"> 
                     <li class="font-bold text-xl">XX UNIVERSITY</li>
                     <li class="font-bold text-gray-500 mt-2">2019~ CURRENT</li>
-                    <li class="font-semibold w-3/4 rounded-md my-2">XXXXXXXX공학과</li>
+                    <li class="font-semibold w-3/4 rounded-md my-2">XXXXX공학과</li>
                 </ul>
                 <ul class="border-r-4 inline-block pr-10"> 
                     <li class="font-bold text-xl">PRACTICAL RESEARCH TEAM</li>
