자바스크립트 정리

--- a/javascript/003.html
+++ b/javascript/003.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p id="one"></p>
-    <script src="002.js"></script>
+    <button onclick="alert('hello world')">hello world</button>
+    <button onclick="document.getElementById('one').innerHTML = 'hello <strong>world document</strong>'">hello world</button>
 </body>
 </html>
