--- a/javascript/005.html
+++ b/javascript/005.html
@@ -7,7 +7,15 @@
     <title>hello javascript</title>
 </head>
 <body>
-    <p id="one"></p>
-    <script src="002.js"></script>
+    <script>
+        let x = 3;
+        let y = 7;
+        let 가희 = -100000000000;
+        let π = 100;
+        // let ✂ = 100;
+        // let ➕ = 100;
+        console.log(가희);
+        console.log(π + π);
+    </script>
 </body>
 </html>
