--- a/javascript/001.html
+++ b/javascript/001.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>hello javascript</title>
 </head>
 <body>
-    <h1 id="one"></h1>
+    <p id="one"></p>
     <script>
-        document.getElementById("one").innerHTML="hello <strong> world </strong>";
-        console.log("hello world");
-        window.alert("하이하이");
+        document.getElementById("one").innerHTML = "hello <strong>world document</strong>";
+        console.log("hello world console");
+        window.alert("hello world alert");
         document.write("hello!!");
     </script>
 </body>
