--- a/javascript/013_배열.html
+++ b/javascript/013_배열.html
@@ -310,12 +310,24 @@
         arr = [1, 2, 4, 8, 16]
         ////   복구   ////
         console.log(arr.map(i => i + 10));
-
+        console.log(arr);
         function weniv(x){
             return x + 100
         }
 
         console.log(arr1.map((value, index, array) => ([index, value.contents, array])));
+        // 16. forEach() => map 과 달리 순회만 함
+        arr = [1, 2, 4, 8, 16]
+        arr.forEach(i => console.log(i+1))
+
+        arr = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+        let 가희 = [];
+        arr.forEach(i => 가희.push(i + 100))    
+        console.log(arr);
+        //17. reduce() => 누적해주며 실행
+        arr = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+
+        arr.reduce((누적값, 현재값) => console.log(`누적값 : ${누적값}`));
     </script>
 </body>
 </html>
