자바스크립트 정리

--- a/javascript/014_반복문문제3.html
+++ b/javascript/014_반복문문제3.html
@@ -18,15 +18,15 @@
         //     sum += +a[i];
         // }
         // console.log(sum);
-        // 다른 풀이
-        let a=[11,22,33,111,2];
-        let sum = 0;
-        for(let i of a) {
-            let s = ''+i;
-            for (let j  of s.split('')) {
-                sum += +j;
-            }
-        }   
+        // 다른 풀이 1
+        // let a=[11,22,33,111,2];
+        // let sum = 0;
+        // for(let i of a) {
+        //     let s = ''+i;
+        //     for (let j  of s.split('')) {
+        //         sum += +j;
+        //     }
+        // }   
         
     </script>
 </body>
