--- a/javascript/014_반복문.html
+++ b/javascript/014_반복문.html
@@ -336,7 +336,7 @@
     console.log(result);
     txt = 'hello world'
     result = ''
-    for (let i = 0; i < text.length; i++) {
+    for (let i = 0; i < txt.length; i++) {
         result = result + txt[i]
     }
     console.log(result);
@@ -346,18 +346,22 @@
     for (let i = 0; i < txt.length; i++) {
         result = txt[i] + result
     }
-    result
-
-    'dlrow olleh'
+    console.log('역순출력'+result);
+    //'dlrow olleh'
+    /*
+        양쪽 중 둘의 차이가 가장 적은 것은?
+    */
     arr = [1, 3, 4, 8, 13, 17, 20]
     result = 10000000
+    index = 0
     for (let i = 0; i < arr.length; i++) {
         if (result > arr[i+1] - arr[i]){
             result = arr[i+1] - arr[i]
+            index = i
         }
     }
-    result
-    1
+    console.log(result,index);
+    //1
     arr = [1, 3, 4, 8, 13, 17, 20]
     result = 10000000
     index = 0
@@ -367,32 +371,28 @@
             index = i
         }
     }
-    result
-    index
-    1
+    console.log(arr[index], arr[index+1]);
     arr = [1, 3, 4, 8, 13, 17, 20]
     result = 10000000
     index = 0
-    for (let i = 0; i < arr.length; i++) {
-        if (result > arr[i+1] - arr[i]){
+    for (let i = 0; i < arr.length-1; i++) {
+        if (result > arr[i+1] - arr[i] ){
             result = arr[i+1] - arr[i];
             index = i
         }
     }
-    arr[index], arr[index+1]
-    4
+    console.log('-1을 해준것'+arr[index], arr[index+1])
     arr = [1, 3, 4, 8, 13, 17, 20]
     result = 10000000
     index = 0
-    for (let i = 0; i < arr.length; i++) {
-        if (result > arr[i+1] - arr[i]){
-            result = arr[i+1] - arr[i];
-            index = i
+    for (let i = 1; i < arr.length; i++) {
+        if (result > arr[i] - arr[i-1] ){
+            result = arr[i] - arr[i-1];
+            index = i;
         }
     }
-    console.log(arr[index], arr[index+1])
-    // VM5311:10 3 4
-    undefined
+    console.log('i-1로도 가능',arr[index-1], arr[index]);
+    //3 4
     /*
     arr = [1, 3, 4, 8, 13, 17, 20]
     result = 10000000
@@ -434,27 +434,8 @@
     5번째 순회       5          3                    1               1
     */
 
-    arr = [1, 3, 4, 8, 13, 17, 20]
-    result = 10000000
-    index = 0
-    for (let i = 1; i < arr.length; i++) {
-        if (result > arr[i] - arr[i-1] ){
-            result = arr[i] - arr[i-1];
-            index = i;
-        }
-    }
-    console.log(arr[index], arr[index+1]);
+    
 
-    arr = [1, 3, 4, 8, 13, 17, 20]
-    result = 10000000
-    index = 0
-    for (let i = 1; i < arr.length; i++) {
-        if (result > arr[i] - arr[i-1] ){
-            result = arr[i] - arr[i-1];
-            index = i;
-        }
-    }
-    console.log(arr[index-1], arr[index]);
     for (let i = 1; i < 10; i++) {
         console.log(`2 X ${i} = ${2*i}`)
     }
@@ -527,24 +508,30 @@
     i = 2;
     result = 0;
     while(i < 101){
+        console.log(i);
         result += i;
         i+=2;
     }
-
-    i = 2;
+    console.log(i);
+    console.log(result);
+    i = 1;
     result = 0;
     while(i < 101){
+        console.log(i);
         result += i*2;
         i++;
     }
-
+    console.log(i);
+    console.log(result);
     i = 0
     sum = 0
     while((i+=2)<101){
         sum += i
+        console.log(i);
+        console.log(sum);
     }
-
-
+    console.log(i);
+    console.log(result);
     sum = 0;
     i = 100;
 
