드롭박스 css 수정

--- a/javascript/select_box_javascript/index.html
+++ b/javascript/select_box_javascript/index.html
@@ -29,19 +29,39 @@
 
         .container {
             margin: 10% auto;
-            text-align:center;
+            width:200px;
         }
 
         .btn-lang {
-            width:200px;
+            width:100%;
             height:40px;
             border: 1px solid #C4C4C4;
             border-radius: 10px;
             box-sizing: border-box;
+            background-color: white;
         }
 
         .type-lang {
             display: none;
+            width:100%;
+            border: 1px solid #C4C4C4;
+            box-sizing: border-box;
+            margin-top:9px;
+            border-radius:10px;
+            padding:4px 0;
+        }
+
+        .list {
+            margin:12px 18px;
+            padding:7px 10px;
+        }
+        .list:hover {
+            background-color:  #F8E4FF;
+        }
+
+        .border {
+            outline: 3px solid #F8E4FF;
+            border: 1px solid #9B51E0;
         }
     </style>
 </head>
@@ -66,11 +86,14 @@
         const list_CS = document.querySelector('.Cs');
         const list_C = document.querySelector('.C');
         langBtn.addEventListener('click', () => {
+            langBtn.textContent ="최애 프로그래밍 언어";
             if(listBtn.style.display == 'block'){
+                langBtn.classList.remove("border");
                 listBtn.style.display = 'none';
             }
             else {
                 listBtn.style.display = 'block';
+                langBtn.classList.add("border");
             }
         })
         listBtn.addEventListener('click', function (event) {
