--- a/javascript/select_box_javascript/index.html
+++ b/javascript/select_box_javascript/index.html
@@ -43,26 +43,18 @@
             box-sizing: border-box;
             background-color: white;
             padding:12px 13px;
-        }
-        .btn-lang span {
-            font-family: 'Roboto';
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 16px;
-            letter-spacing: 0em;
-            margin-right:25px;
-        }
-/* 
-        의문 ? padding 어케 주지
-        .btn-lang::after {
-            content:'';
-            background-image: url("./icon-Triangle-down.png");
+            text-align: left;
+            background-size: 10px 10px;
+            background-position: right 15px center;
             background-repeat: no-repeat;
-            height: 10px;
-            width: 10px;  
-            display:inline-block;
-        } */
+        }
 
+        .opened {
+            background-image: url("./icon-Triangle-down.png");
+        }
+        .closed {
+            background-image: url("./icon-Triangle-up.png");
+        }
         .type-lang {
             display: none;
             width:100%;
@@ -85,14 +77,17 @@
             outline: 3px solid #F8E4FF;
             border: 1px solid #9B51E0;
         }
+
+        .show {
+            display:block;
+        }
     </style>
 </head>
 <body>
     <article class="container">
         <h2 class="txt-hide">셀렉트박스</h2>
-        <button class="btn-lang">
-            <span>최애 프로그래밍 언어</span>
-            <img src="./icon-Triangle-down.png" alt="">
+        <button class="btn-lang opened">
+            <span class="txt-lang">최애 프로그래밍 언어</span>
         </button>
         <ul class="type-lang">
             <li class="list python">Python</li>
@@ -103,42 +98,40 @@
         </ul>
     </article>
     <script>
+        //가급적 style 사용하지 말기!!!
         const langBtn = document.querySelector('.btn-lang');
         const listBtn = document.querySelector('.type-lang');
-        const list_python = document.querySelector('.python');
-        const list_java = document.querySelector('.java');
-        const list_javascript = document.querySelector('.javascript');
-        const list_CS = document.querySelector('.Cs');
-        const list_C = document.querySelector('.C');
+        const langTxt = document.querySelector('.txt-lang');
+
         langBtn.addEventListener('click', () => {
-            langBtn.textContent ="최애 프로그래밍 언어";
-            if(listBtn.style.display == 'block'){
-                langBtn.classList.remove("border");
-                listBtn.style.display = 'none';
+            langTxt.textContent ="최애 프로그래밍 언어";
+            listBtn.classList.toggle('show');
+            if(listBtn.classList.contains('show')) {
+                langBtn.classList.remove("opend", "closed");
+                langBtn.classList.add("closed");
             }
             else {
-                listBtn.style.display = 'block';
-                langBtn.classList.add("border");
+                langBtn.classList.remove("opend", "closed");
+                langBtn.classList.add("opend");
             }
+
+
         })
         listBtn.addEventListener('click', function (event) {
             if( event.target.textContent == 'Python') {
-                langBtn.textContent = 'Python';
+                langTxt.textContent = 'Python';
             }
             else if( event.target.textContent == 'Java') {
-                langBtn.textContent = 'Java';
+                langTxt.textContent = 'Java';
             }
             else if( event.target.textContent == 'JavaScript') {
-                langBtn.textContent = 'JavaScript';
+                langTxt.textContent = 'JavaScript';
             }
             else if( event.target.textContent == 'C#') {
-                langBtn.textContent = 'C#';
+                langTxt.textContent = 'C#';
             }
             else if( event.target.textContent == 'C/C++') {
-                langBtn.textContent = 'C/C++';
-            }
-            else {
-                langBtn.textContent = '최애 프로그래밍 언어';
+                langTxt.textContent = 'C/C++';
             }
         })      
     </script>
