--- a/javascript/015_함수.html
+++ b/javascript/015_함수.html
@@ -792,7 +792,7 @@
         // ƒ test1(){
         //     return 'hello 1'
         // }
-        console.dir(test1)
+        //console.dir(test1)
 
 
         // (function 이름(){
@@ -817,17 +817,18 @@
         //     console.log(x + y)
         // )
         // VM13544:2 Uncaught SyntaxError: Unexpected identifier
-        (function 이름2(){
-            let x = 10;
-            let y = 20;
-            console.log(x + y)
-        }())
+        // (function 이름2(){
+        //     let x = 10;
+        //     let y = 20;
+        //     console.log(x + y)
+        // }())
         // VM13590:4 30
 
-        x
+        // consoel.log(x);
+        //지역변수라 에러남/
         // VM13671:1 Uncaught ReferenceError: x is not defined
         //     at <anonymous>:1:1
-        (익명)
+        // (익명)
         // 모든 요소들이 로드된 이후에 실행, 함수는 1개만 실행 가능
         // window.onload = function(){}
 
@@ -837,20 +838,21 @@
             // 1000줄의 코드
             c(x + y); //언젠가가 지금! 지금 너를 호출해줄게! 콜백!
             // 1000줄의 코드
-        return x + y;
+            return x + y;
         }
 
         function aaaa(s){
         document.write('콜백함수', s);
         }
 
-        함수6(10, 20, aa);
-        30
+        함수6(10, 20, console.log);
+        //30
         function 함수7(a, b, c){
             console.log(a, b, c)
+            console.log('c는?',c);
         }
 
-        함수7(10, 20)
+        함수7(10);
         // VM14528:2 10 20 
 
         함수7(10, 20, 30, 40, 50)
@@ -865,38 +867,39 @@
         function test(a=10, b=20, c=30){
             return a, b, c
         }
-        test()
-        30
-        test(100)
-        30
-        test(100, 200, 300)
+        //마지막꺼 return
+        console.log(test())
+        //30
+        console.log(test(100))
+        //30
+        console.log(test(100, 200, 300));
         300
         function test(a=10, b=20, c=30){
             return a+b+c
         }
-        test()
-        60
-        test()
-        60
-        test(100)
-        150
-        test(100, 200)
-        330
-        test(100, 200, 300)
-        600
+        console.log(test());
+        //60
+        console.log(test());
+        //60
+        console.log(test(100));
+        //150
+        console.log(test(100, 200));
+        //330
+        console.log(test(100, 200, 300));
+        //600
 
         function factorial(n){
             return n * n-1
         }
 
-        factorial(5)
-        24
+        console.log(factorial(5));
+        //24
         function factorial(n){
             return n * (n-1)
         }
 
-        factorial(5)
-        20
+        console.log(factorial(5));
+        //20
         function factorial(n){
             if (n <= 1){
                 return n
@@ -904,20 +907,20 @@
             return n * factorial(n - 1)
         }
 
-        factorial(5)
-        120
+        console.log(factorial(5));
+        //120
         let ss = 0;
         for (let i = 1; i < 6; i++) {
             ss *= i
         }
-        ss
-        0
+        console.log(ss);
+        //0
         let sss = 1;
         for (let i = 1; i < 6; i++) {
             sss *= i
         }
-        sss
-        120
+        console.log(sss);
+        //120
 
         function factorial(n){
             if (n <= 1){
@@ -930,13 +933,13 @@
         for (let i = 1; i < 6; i++) {
             ssss *= i
         }
-        ssss
-        120
+        console.log(ssss);
+        //120
         let sssss = 1;
         for (let i = 5; i > 0; i--) {
-            s *= i
+            sssss *= i
         }
-        sssss
+        console.log(sssss);
         120
         function sigma(n){
             if (n <= 1){
@@ -945,10 +948,10 @@
             return n + sigma(n - 1)
         }
 
-        sigma(100)
-        5050
-        'hello world'
-        'hello world'
+        console.log(sigma(100));
+        //5050
+        //'hello world'
+        //'hello world'
         for (let i of 'hello world') {
             console.log(i);
         }
@@ -963,20 +966,20 @@
         // VM15985:2 r
         // VM15985:2 l
         // VM15985:2 d
-
+        //역순출력
         let s = ''
         for (let i of 'hello world') {
             s = i + s
         }
-        'dlrow olleh'
-        s
-        'dlrow olleh'
-        'hello world'.slice(1)
-        'ello world'
-        'ello world'.slice(1)
-        'llo world'
-        'llo world'.slice(1)
-        'lo world'
+        //'dlrow olleh'
+        console.log(s);
+        //'dlrow olleh'
+        console.log('hello world'.slice(1));
+        //'ello world'
+        console.log('ello world'.slice(1));
+        //'llo world'
+        console.log('llo world'.slice(1));
+        //'lo world'
         function reverse(text){
             text += ''
             if (text.length <= 1){
@@ -985,8 +988,8 @@
             return reverse(text.slice(1)) + text[1]
         }
 
-        reverse('hello world')
-        'ddlrow olle'
+        console.log(reverse('hello world'));
+        //'ddlrow olle'
         function reverse(text){
             text += ''
             if (text.length <= 1){
@@ -995,21 +998,21 @@
             return reverse(text.slice(1)) + text[0]
         }
 
-        reverse('hello world')
-        'dlrow olleh'
+        console.log(reverse('hello world'));
+        //'dlrow olleh'
         let arr4 = [10, 20, 30]
         function 함수(value){
             value[0] = 1000
         }
-        함수(arr4)
-
-        arr
-        (3) [1000, 20, 30]
+        console.log(함수(arr4));
+        console.log(arr4);
+        //(3) [1000, 20, 30]
         let xxxxxxx = 0
         function 함수33(value){
             value=1000
         }
-        함수33(xxxxxxx)
+        console.log(함수33(xxxxxxx));
+        console.log(xxxxxxx);
         // VM16939:1 Uncaught SyntaxError: Identifier '함수2' has already been declared
         //     at <anonymous>:1:1
         // (익명) @ VM16939:1
@@ -1017,25 +1020,24 @@
         function 함수200(value){
             value=1000
         }
-        함수200(x)
+        console.log(함수200(x));
 
-        x
-        0
+        console.log('dlrjs',x);
+        //0
         let aaaaaaa = {}
         function 함수300(b){
             b = 1000;
         }
-        함수300(aaaaaaa)
+        console.log(함수300(aaaaaaa));
+        console.log(aaaaaaa);
 
-        aaaaa
-        {}
+
         let aaaaaa = []
         function 함수400(b){
             b = 1000;
         }
-        함수400(aaaaaa)
-
-        aaaaa
+        console.log(함수400(aaaaaa));
+        console.log(aaaaaa);
         // []
         function factorial(n){
             if(n >= 1){
