1만 시간의 법칙 마크업

--- a/CSS/055_fixed와_마진병합현상_보충설명.html
+++ b/CSS/055_fixed와_마진병합현상_보충설명.html
@@ -16,7 +16,7 @@
             2. 아래 값을 주석처리 해보세요.
             top 값을 안주었기 때문에 마진 병합 현상이 발생
             */
-            /* top: 0; */
+            top: 0;
             left: 0;
             padding: 10px;
             background-color: brown;
